# photomi

./: .gitattributes  .gitignore  LICENSE  README.md
backend/photomi/: .env.example  .gitattributes  .gitignore  README.md  database.py  image_processing.py  main.py  models.py  pyproject.toml  requirements.txt  storage.py
frontend/photomi/: .gitattributes  .gitignore  README.md  pubspec.yaml
frontend/photomi/android/app/: build.gradle.kts
frontend/photomi/android/app/src/main/: AndroidManifest.xml
frontend/photomi/android/app/src/main/kotlin/com/example/photomi/: MainActivity.kt
frontend/photomi/ios/Runner/: Info.plist
frontend/photomi/ios/Runner.xcodeproj/: project.pbxproj
frontend/photomi/lib/: config.dart  main.dart
frontend/photomi/lib/screens/: photo_viewer_screen.dart
frontend/photomi/linux/: CMakeLists.txt
frontend/photomi/linux/runner/: my_application.cc
frontend/photomi/macos/Runner.xcodeproj/: project.pbxproj
frontend/photomi/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/photomi/macos/Runner/Configs/: AppInfo.xcconfig
frontend/photomi/test/: widget_test.dart
frontend/photomi/web/: index.html  manifest.json
frontend/photomi/windows/: CMakeLists.txt
frontend/photomi/windows/runner/: Runner.rc  main.cpp
scripts/: split_repos.sh
